2010-01-19  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #13275: sortable_updatePasteButtons not needed anymore
	* Fixed bug: #11520: DS Tag for Hiding Field Preview Data (part 2)
	* Fixed bug: #13154: Deleting the last element from a section in an FCE crashes rendering
	* Fixed bug: #3843: Unmapping does not hide ce field in page module
	
2010-01-18  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to bugfix #13180: Sanitize returnUrl
	* Corrected typo in extConf language file
	
2010-01-17  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #13274: delete icon carries wrong css-class
	* Fixed bug: #4585: Wrong links for editing content stored in page flexform 
	* Fixed bug: #13268: ReturnURls after the sidebar was reloaded aren't correct

2010-01-13  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to bugfix #13225: Cleanup invalid html in page module
	* Fixed bug: #13225: Cleanup invalid html in page module
	* Fixed bug: #13213: page module calls pagerenderer too early
	
2010-01-10  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #13159: Render Button in version tab "Create version of this page" if no page version exists

2010-01-09  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #13174: Sub Page Datastructure Field missing (Part2) 

2010-01-08  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #13180: Sanitize returnUrl 

2010-01-08  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #13174: Sub Page Datastructure Field missing 
	* Fixed issue: #13079: Hooks to reprocess lKey and vKey  in pi1
	* Fixed bug: #13001: new page wizard should respect TCEFORM.pages.* settings

2010-01-06  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #11521: Allow include of javascript files in pagemodule
	* Fixed bug: #13157: cm2 has no back functionality if returnUrl is given
	* Fixed bug: #13158: Inconsistent Tabs

2010-01-05  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #13149: Empty page after "Save and exit" of changing existing DS/TO